<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/param_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#ff123456"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <!-- Title and Subtitle -->

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <TextView
                android:id="@+id/setupTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="0dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:text="@string/setup_title"
                android:textAppearance="?android:attr/textAppearanceLarge"/>
            <TextView
                android:id="@+id/setupSubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="0dp"
                android:text="@string/setup_subtitle"
                android:textAppearance="?android:attr/textAppearanceSmall"/>
        </LinearLayout>
        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp">

            <TableRow>

                <Button
                    android:id="@+id/Button01"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:onClick="clickOK"
                    android:text="@string/button01text"
                    android:textAppearance="?android:attr/textAppearanceMedium">
                </Button>

                <Button
                    android:id="@+id/Button02"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:onClick="clickSave"
                    android:text="@string/button02text"
                    android:textAppearance="?android:attr/textAppearanceMedium">
                </Button>

                <Button
                    android:id="@+id/Button03"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:onClick="clickExit"
                    android:text="@string/button03text"
                    android:textAppearance="?android:attr/textAppearanceMedium">
                </Button>

            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TableRow>

                <TextView
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/paramlabelparttext"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <Spinner
                    android:id="@+id/paramPart"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:singleLine="true"/>
            </TableRow>

            <TableRow>

                <TextView
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/paramlabelsesstext"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <Spinner
                    android:id="@+id/paramSess"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            </TableRow>

            <TableRow>

                <TextView
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/paramlabelblocktext"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <Spinner
                    android:id="@+id/paramBlock"
                    android:layout_weight="1"
                    android:gravity="left"/>
            </TableRow>

            <TableRow>

                <TextView
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/paramlabelgrouptext"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <Spinner
                    android:id="@+id/paramGroup"
                    android:layout_weight="1"
                    android:gravity="left"/>
            </TableRow>

            <TableRow>

                <TextView
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/paramlabelconditiontext"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <Spinner
                    android:id="@+id/paramCondition"
                    android:layout_weight="1"
                    android:gravity="left"/>
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="right|center_vertical"
                    android:paddingRight="5dp"
                    android:text="@string/paramlabelmodetext"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="20dp">
                    <RadioButton
                        android:id="@+id/paramMode1D"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="radioButtonClick"
                        android:paddingRight="10dp"
                        android:text="@string/paramlabelmodetap"
                        android:textAppearance="?android:attr/textAppearanceMedium"/>
                    <RadioButton
                        android:id="@+id/paraModeZoom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="radioButtonClick"
                        android:text="@string/paramlabelmodezoom"
                        android:textAppearance="?android:attr/textAppearanceMedium"/>
                </RadioGroup>
            </TableRow>

            <TableRow>
                <TextView
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/paramlabelsessionstext"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <Spinner
                    android:id="@+id/paramTrials"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/paramlabeltargetstext"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/paramlabelcolumntext"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <Spinner
                    android:id="@+id/paramTargetColumn"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/paramlabelrowtext"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <Spinner
                    android:id="@+id/paramTargetRow"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            </TableRow>

            <TableRow>

                <TextView
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/paramlabelwidthtext"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <Spinner
                    android:id="@+id/paramWidth"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            </TableRow>

            <CheckBox
                android:id="@+id/paramVibrotactileFeedback"
                android:text="@string/paramvibrotactilefeedbacktext"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <CheckBox
                android:id="@+id/paramAuditoryFeedback"
                android:text="@string/paramauditoryfeedbacktext"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </TableLayout>
    </LinearLayout>

</ScrollView>